Replace javax.script.ScriptEngine with GraalVM Polyglot API directly
Co-authored-by: rymsha <2891483+rymsha@users.noreply.github.com>